# nodestream-plugin-sbom

./: .gitignore  README.md  pyproject.toml
.github/workflows/: format.yml  release.yaml
nodestream_plugin_sbom/: __init__.py  github_sbom.yaml  plugin.py  sbom.yaml  sbom_amazon_inspector.yaml  sbom_github.yaml
nodestream_plugin_sbom/amazon_inspector/: __init__.py  amazon_inspector_sbom.py
nodestream_plugin_sbom/github/: __init__.py  github_sbom.py
nodestream_plugin_sbom/sbom/: __init__.py  sbom.py
nodestream_plugin_sbom/utils/: cyclonedx_writer.py  sbom_writer.py  spdx_writer.py
